Migrated Prisma to Mongoose

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 GITHUB_CLIENT_ID="Ov23liMPkoQqm1EUGb14"
 GITHUB_CLIENT_SECRET="df07bb8643d7a03290ac0a823c3725edb6cfa31c"
+DATABASE_URL="mongodb+srv://mmanvith638:137IsyTZvOj29pTk@cluster0.as6kapw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI="mongodb+srv://manvith131250:GUaN8QpNZ4Sd08Hs@cluster0.ied98jf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
