--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.5.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@prisma/client": "^5.11.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.0.1",
     "date-fns": "^3.4.0",
     "gray-matter": "^4.0.3",
+    "mongodb": "^5.9.2",
+    "mongoose": "^8.4.1",
     "next": "^14.1.3",
-    "next-auth": "^4.24.5",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.12",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "prisma": "^5.7.0",
     "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
@@ -42,6 +44,7 @@
     "eslint": "^8",
     "eslint-config-next": "^14.1.3",
     "postcss": "^8",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
