--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
     "@auth/prisma-adapter": "^1.5.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@prisma/client": "^5.11.0",
+    "@types/metascraper": "^5.14.3",
     "axios": "^1.6.2",
     "bcrypt": "^5.0.1",
     "date-fns": "^3.4.0",
     "gray-matter": "^4.0.3",
+    "metadata-scraper": "^0.2.61",
+    "metascraper": "^5.45.10",
+    "metascraper-description": "^5.45.10",
+    "metascraper-image": "^5.45.10",
+    "metascraper-title": "^5.45.10",
+    "metascraper-url": "^5.45.10",
     "mongodb": "^5.9.2",
     "mongoose": "^8.4.1",
     "next": "^14.1.3",
@@ -35,7 +42,12 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/metascraper-description": "^5.14.5",
+    "@types/metascraper-image": "^5.14.5",
+    "@types/metascraper-title": "^5.14.5",
+    "@types/metascraper-url": "^5.14.5",
     "@types/node": "^20.11.27",
+    "@types/node-fetch": "^2.6.11",
     "@types/nodemailer": "^6.4.14",
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18.2.66",
@@ -43,6 +55,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "^14.1.3",
+    "file-loader": "^6.2.0",
     "postcss": "^8",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.3.0",
