--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.5.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@prisma/client": "^5.11.0",
     "@types/metascraper": "^5.14.3",
