--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@auth/prisma-adapter": "^1.5.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.20",
+    "@mui/icons-material": "^5.15.21",
+    "@mui/material": "^5.15.21",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@prisma/client": "^5.11.0",
     "@types/metascraper": "^5.14.3",
+    "6pp": "^1.2.16",
     "axios": "^1.6.2",
     "bcrypt": "^5.0.1",
+    "chart.js": "^4.4.3",
+    "clsx": "^2.1.1",
     "date-fns": "^3.4.0",
     "gray-matter": "^4.0.3",
     "metadata-scraper": "^0.2.61",
@@ -26,6 +30,7 @@
     "metascraper-image": "^5.45.10",
     "metascraper-title": "^5.45.10",
     "metascraper-url": "^5.45.10",
+    "moment": "^2.30.1",
     "mongodb": "^5.9.2",
     "mongoose": "^8.4.1",
     "next": "^14.1.3",
@@ -36,8 +41,11 @@
     "prettier-plugin-tailwindcss": "^0.5.7",
     "prismjs": "^1.29.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "stripe": "^14.7.0",
