--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^8.4.1",
     "next": "^14.1.3",
     "next-auth": "^4.24.7",
+    "next-superjson-plugin": "^0.6.3",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.12",
     "prettier": "^3.1.0",
