add cloudinary setup for image sending

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ GITHUB_CLIENT_SECRET="df07bb8643d7a03290ac0a823c3725edb6cfa31c"
 DATABASE_URL="mongodb+srv://mmanvith638:137IsyTZvOj29pTk@cluster0.as6kapw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 MONGO_URI="mongodb+srv://gunjjoshi8372:Gunj8692@cluster0.edz3lmj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 MONGO_URL="mongodb+srv://manvith131250:nxEbr2902smfalVZ@cluster0.d87mr8x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dekqz1szb
