--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^8.4.1",
     "next": "^14.1.3",
     "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.6.2",
     "next-superjson-plugin": "^0.6.3",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.12",
@@ -45,6 +46,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "remark": "^15.0.1",
