--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@auth/prisma-adapter": "^1.5.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.1.2",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@prisma/client": "^5.11.0",
     "@types/metascraper": "^5.14.3",
     "6pp": "^1.2.16",
+    "aws4": "^1.13.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.0.1",
     "chart.js": "^4.4.3",
