--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.14.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "stripe": "^14.7.0",
