add pusher code

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "gray-matter": "^4.0.3",
+    "lodash": "^4.17.21",
     "metadata-scraper": "^0.2.61",
     "metascraper": "^5.45.10",
     "metascraper-description": "^5.45.10",
@@ -44,6 +45,8 @@
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "prismjs": "^1.29.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
@@ -60,6 +63,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.17.6",
     "@types/metascraper-description": "^5.14.5",
     "@types/metascraper-image": "^5.14.5",
     "@types/metascraper-title": "^5.14.5",
