remove deployment error

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dekqz1szb
 NEXT_PUBLIC_PUSHER_APP_KEY=d5e18e5e71cf31f5310e
 PUSHER_APP_ID=1834568
 PUSHER_SECRET=5f925d996aa5df57daa9
+
+SECRET="bxedsbmanvithbcebdubgunjskxsxsdcbcbccc"
