add nextauth url, update nextjs version

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ PUSHER_APP_ID=1834568
 PUSHER_SECRET=5f925d996aa5df57daa9
 
 SECRET="bxedsbmanvithbcebdubgunjskxsxsdcbcbccc"
+
+NEXTAUTH_URL=http://localhost:3000
