--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "chart.js": "^4.4.3",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "filepond": "^4.31.1",
+    "formidable": "^3.5.1",
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "metadata-scraper": "^0.2.61",
@@ -42,6 +44,8 @@
     "next-superjson-plugin": "^0.6.3",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.12",
+    "pdf-parse": "^1.1.1",
+    "pdf2json": "^3.1.3",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "prismjs": "^1.29.0",
@@ -50,6 +54,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-filepond": "^7.1.2",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
@@ -63,6 +68,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/formidable": "^3.4.5",
     "@types/lodash": "^4.17.6",
     "@types/metascraper-description": "^5.14.5",
     "@types/metascraper-image": "^5.14.5",
@@ -74,6 +80,7 @@
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "^14.1.3",
