--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/fetch-metadata.", "src/components/DesktopSidebar"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/fetch-metadata.", "@types/**/*.d.ts", "src/components/DesktopSidebar"],
   "exclude": ["node_modules"]
 }
